Remove showLink() function, add css file, fix elements alignment

--- a/resources/css/care.css
+++ b/resources/css/care.css
@@ -1,12 +1,22 @@
+body {
+  background: #1c375c;
+}
+
 .care-index {
   background: #1c375c;
   color: white;
 }
-
+.care-index h2 {
+  color: #3498db
+}
 .hidden {
-  display: none
+  display: flex;
 }
 
 .active {
   display: flex;
+}
+
+.top-nav {
+  background: white;
 }
